--- a/Relazione/sezioni/Introduzione.tex
+++ b/Relazione/sezioni/Introduzione.tex
@@ -1,6 +1,9 @@
 \section{Introduzione}
 
 \subsection{Abstract}
-
-
+Il progetto \emph{Concessionaria GREG} vuole implementare un sito Internet che offra la possibilità di fornire informazioni riguardo i prodotti disponibili, suddivisi in veicoli a noleggio e veicoli in vendita, i contatti, l'ubicazione.\\
+Il sito permette di inserire, modificare ed eliminare i prodotti: queste operazioni sono permesse solamente ad un utente privilegiato, mentre tutti gli altri utenti saranno visitatori normali a cui viene garantita la visualizzazione delle pagine del sito consentite.\\
+Inoltre deve essere garantita l'accessibilità in modo che chiunque possa navigare nel sito serenamente.\\
+Una volta garantita l'accessibilità, si vuole focalizzare l'attenzione sull'usabilità, rispettando gli standard W3C e la separazione tra struttura, presentazione e comportamento.\\
+L'obiettivo del sito Internet è garantire una navigazione e ricerca fluida degli utenti all'interno del sito, in modo da evitare il disorientamento e, nel caso dovesse succedere, garantire supporto per tornare all'interno del sito.\\
 \pagebreak
