fix errori validazione

--- a/Relazione/sezioni/Analisi.tex
+++ b/Relazione/sezioni/Analisi.tex
@@ -3,14 +3,23 @@
     \subsection{Utenza}
         L'utenza del sito non può essere inquadrata in un target specifico poiché destinata al pubblico della Concessionaria GREG il quale non presenta restrizioni o interesse per gruppi definiti. Ciò si traduce nell'esigenza di un sito dalla facile e immediata comprensione e nella piena ottemperanza dei canoni di accessibilità.
 
-    \subsection{Attori}
-        Abbiamo individuato tre tipi di attori:
+    \subsection{Casi d'uso}
+        
+        \subsubsection{Utente generico}
+        L’utente viene definito generico nel momento in cui può solo navigare all’interno del sito, senza alcun permesso di accedere all’area riservata, richiere preventivi o effettuale noleggio di automobili.
+        L’utente generico dispone dei seguenti casi d’uso:
         \begin{itemize}
-            \item \textbf{Utente non registrato:} 
-            \item \textbf{Utente registrato:} 
-            \item \textbf{Admin:} è
+            \item Visualizzazione pagina "Home";
+            \item Visualizzazione pagina "Veicoli a noleggio";
+            \item Visualizzazione pagina "Veicoli in vendita";
+            \item Ricerca veicoli nelle deu pagine precedenti;
+            \item Visualizzazione pagina "Contatti";
+            \item Invio messaggi attraverso form nella pagina "Contatti";
+            \item Visualizzazione pagina "Login";
+            \item Visualizzazione pagina "Registrazione";
+            \item Possibilità di registrarsi;
         \end{itemize}
-        Nella relazione useremo il termine "utente generico" per indicare un utente registrato che non è amministratore.
+        \subsubsection{Utente non registrato}
 
     \subsection{Pagine del sito}
         In questa sezione sono presentate le varie pagine del sito, con le caratteristiche e le funzionalità che devono avere.
