--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -3,35 +3,33 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
 \begin{itemize}
     \item Conte Riccardo:
         \begin{enumerate}
-        \item pagine HTML: acquista;
-        \item CSS pagine HTML: acquista;
-        \item script PHP: acquistaBiglietti, prenotaEventi, alcune funzioni contenute nel file sqlInteractions.php;
-        \item pagine PHP: acquista;
-        \item parte del database.
+        \item pagine HTML: ;
+        \item CSS pagine HTML ;
+        \item script PHP: ;
+        \item pagine PHP: ;
         \end{enumerate}
     \item Corrò Giacomo:
         \begin{enumerate}
-            \item pagine HTML: areaPrivata, login, nuovoAnimale, nuovoEvento, registrati, paginaVuota;
-            \item CSS pagine HTML areaPrivata, login e paginaVuota, CSS del menù;
-            \item script PHP: login, registrazione, eliminaAnimale, eliminaEvento, alcune funzioni contenute nel file sqlInteractions.php, alcune funzioni contenute nel file modulesInit.php;
-            \item pagine PHP: areaPrivata, login, registrati, paginaVuota;
-            \item parte del database.
+            \item pagine HTML: noleggioAcquista, noleggioVeicolo, pagina404, paginaVuota;
+            \item CSS pagine HTML noleggioAcquista, noleggioVeicolo e paginaVuota, parte del CSS del menù, CSS stampa pagine relative ai veicoli;
+            \item script PHP: acquistaVeicoloFn, noleggiaVeicoloFn, funzioniVeicoli, parte di funzioniGenerali;
+            \item pagine PHP: acquistaVeicoli, noleggioVeicoli, noleggioVeicolo, paginaVuota, pagina404;
+            \item funzioni JS veicoli.js;
         \end{enumerate}
     \item Fiorese Giulia:
         \begin{enumerate}
-            \item pagine HTML: home, animali, cuccioli;
-            \item CSS pagine HTML home, animali, cuccioli, vari form e del menù;
-            \item script PHP: parte di salvaEvento, salvaAnimale, gran parte delle funzioni contenute nel file sqlInteractions.php, gran parte delle funzioni contenute nel file modulesInit.php;
-            \item pagine PHP: home, animali, cuccioli, salvaEvento, salvaAnimale;
-            \item parte del database.
+            \item pagine HTML: ;
+            \item CSS pagine HTML;
+            \item script PHP: ;
+            \item pagine PHP: ;
         \end{enumerate}
     \item Tabacchi Erik:
         \begin{enumerate}
-            \item pagine HTML: info, eventi;
-            \item CSS pagine HTML info e eventi;
-            \item script PHP: invioMessaggio, parte di salvaEvento, salvaAnimale, alcune funzioni contenute nel file sqlInteractions.php, alcune funzioni contenute nel file modulesInit.php;
-            \item pagine PHP: info, eventi;
-            \item parte del database.
+            \item pagine HTML: ;
+            \item CSS pagine HTML;
+            \item script PHP: ;
+            \item pagine PHP: ;
+            \item database.
         \end{enumerate}
 \end{itemize}
 Il punto di partenza dello sviluppo è stato la creazione le pagine in HTML, definendo prima l'header, il footer e il menù insieme e poi inserendo i contenuti separatamente. Successivamente le pagine HTML sono state convertite in pagine PHP a cui è stato aggiunto il contenuto vero e proprio, ovvero quello proveniente dal database, il quale è stato sviluppato in parallelo alle pagine PHP. \\
@@ -41,10 +39,10 @@ L'ultima parte della realizzazione è stata aggiungere CSS al sito, avendo cura 
 Per quanto riguarda la relazione, ognuno ha scritto la parte di analisi relativa alla propria sezione del sito. Le parti generali della relazione sono state scritte da tutti i membri del gruppo.
 Vengono elencate nel dettaglio le varie parti:
 \begin{itemize}
-    \item Riccardo Conte: sezioni 2.3.5, 2.3.4, capitolo 6.
-    \item Giacomo Corrò: sezioni 2.3.6, 2.3.7, 3.1, 7.1, capitolo 4 e 8, appendice A e C, revisione finale globale e correzione.
-    \item Giulia Fiorese: capitolo 1, sezioni 2.3.1, 2.3.2, 3.2, 7.2, appendice B, revisione finale globale e correzione.
-    \item Erik Tabacchi: sezioni 2.3.3, 2.3.4, capitolo 5.
+    \item Riccardo Conte: 
+    \item Giacomo Corrò: 
+    \item Giulia Fiorese: 
+    \item Erik Tabacchi:
 \end{itemize}
 Tutte le parti della relazione non elencate sono state scritte durante gli incontri, quindi tutto il gruppo ha preso parte alla stesura.
 \pagebreak
