--- a/Relazione/sezioni/ValidazioneTest.tex
+++ b/Relazione/sezioni/ValidazioneTest.tex
@@ -3,6 +3,7 @@ Tutte le pagine e il relativo codice sono stati sottoposti a una validazione att
     \begin{itemize}
         \item Validatore online W3C per il CSS \url{https://jigsaw.w3.org/css-validator/};
         \item Validatore online W3C per l'HTML \url{https://validator.w3.org/};
+        \item Validatore Total Validator Test per l'HTML;
         \item Contrast Analyzer per verificare che i colori usati \url{https://webaim.org/resources/contrastchecker/}.
     \end{itemize}
     La validazione del codice HTML è stata fatta incollando direttamente il codice sorgente prodotto dalle pagine PHP nel validatore W3C, in modo tale da poter validare tutto quel codice non presente nelle pagine in HTML.
