--- a/Relazione/sezioni/Appendice.tex
+++ b/Relazione/sezioni/Appendice.tex
@@ -3,7 +3,7 @@
     Per scelta del gruppo ogni utente che si registra al sito è considerato generico, ovvero non amministratore. Per inserire un nuovo amministratore bisogna prima registrarsi attraverso l'apposito form e poi cambiare attraverso un query SQL o phpMyAdmin il campo FlAdmin della tabella Utenti da 0 a 1.
 
     \section{Popolamento}
-    Per avere un reale utilizzo del sito, sono già stati inseriti alcune auto. Inoltre per l'utente generico sono stati effettuati degli acquisti e aggiunti dei messaggi visualizzabili nell'area privata.\\
+    Per avere un reale utilizzo del sito, sono già stati inseriti alcune auto. Inoltre per l'utente generico sono stati effettuati degli acquisti e aggiunti dei messaggi visualizzabili nell'area privata.
 
     \section{Strumenti utilizzati}
     \begin{itemize}
