--- a/Relazione/import/first-page.tex
+++ b/Relazione/import/first-page.tex
@@ -35,10 +35,10 @@
 	\textbf{Email referente gruppo:} \\ giacomo.corro@studenti.math.unipd.it \\
 	\textbf{Repository pubblica:} \\ \url{https://github.com/TheJack95/progettoTecnologieWeb2019-2020_v2}\\
 	\renewcommand{\arraystretch}{1.8}
-	\rowcolors{3}{green!100!black!15}{}
+	\rowcolors{3}{yellow!100!black!15}{}
 	\begin{longtable}[H]{c c c}
 		\caption{Utenti}\\
-		\rowcolor[HTML]{58c25d}
+		\rowcolor[HTML]{F1AB00}
 		\multicolumn{1}{c}{\color[HTML]{FFFFFF} \textbf{Utente}} &
 		\multicolumn{1}{c}{\color[HTML]{FFFFFF} \textbf{Email}} &
 		\multicolumn{1}{c}{\color[HTML]{FFFFFF} \textbf{Password}} \\
