--- a/Relazione/import/style.tex
+++ b/Relazione/import/style.tex
@@ -14,6 +14,8 @@
 	\futurelet\TMPfootrule\def\footrule{{\TMPfootrule}}
 	\setcounter{page}{0}
 	\pagenumbering{arabic}
+	\setcounter{secnumdepth}{5} % numera i sottoparagrafi
+	\setcounter{tocdepth}{5} %aggiunge all'indice i sottoparagrafi
 	\renewcommand{\headrulewidth}{0.2pt}
 	\renewcommand{\footrulewidth}{0.2pt}
 }
