--- a/Relazione/sezioni/Analisi.tex
+++ b/Relazione/sezioni/Analisi.tex
@@ -12,13 +12,41 @@
             \item Visualizzazione pagina "Home";
             \item Visualizzazione pagina "Veicoli a noleggio";
             \item Visualizzazione pagina "Veicoli in vendita";
-            \item Ricerca veicoli nelle due pagine precedenti;
             \item Visualizzazione pagina "Contatti";
+            \item Ricerca veicoli nelle due pagine precedenti;
             \item Invio messaggi attraverso form nella pagina "Contatti";
             \item Visualizzazione pagina "Login";
             \item Visualizzazione pagina "Registrazione";
             \item Possibilità di registrarsi;
         \end{itemize}
+
+        \paragraph{Visualizzazione pagina "Home"}
+        La homepage del sito, la prima a cui l'utente accede, deve contenere le 5 W e presenta una breve descrizione del parco.
+        Prevede 3 sezioni:
+        \begin{enumerate}
+            \item il testo semplice con le informazioni generiche (5W+descrizione);
+            \item una sezione che mostra il prossimo evento del parco;
+            \item una sezione con alcune regole da rispettare nel parco.
+        \end{enumerate}
+        Se si desidera raggiungere la homepage mentre si sta visitando una pagina interna del sito, è possibile cliccare sulla voce home del menù oppure sul titolo/logo presente nell'header.
+
+        \paragraph{Visualizzazione pagina "Veicoli a noleggio"}
+        In questa pagina vengono visualizzati i veicoli disponibili per il noleggio. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse a noleggiare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
+
+        \paragraph{Visualizzazione pagina "Veicoli in vendita"}
+        In questa pagina vengono visualizzati i veicoli disponibili per l'acquisto. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse ad acquistare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
+
+        \paragraph{Visualizzazione pagina "Contatti"}
+        L’utente generico accede alla pagina info cliccando la sezione info presente nella navbar, vi è inoltre la possibilità di venire indirizzati direttamente alla sezione contatti della pagina cliccando sul link contatti che viene visualizzata passando il cursore sulla sezione info. La pagina offre informazioni e servizi utili all’utente come:
+        L’indirizzo del parco, la mappa con le indicazioni per raggiungere il parco importata da Google Maps, nonostante non sia supportata da XHTML 1.0 Strict è stato scelto di tenerla dato che è compatibile con la maggior parte dei browser e fornisce un servizio non indifferente all’utente che visita la pagina.
+        \begin{itemize}
+            \item Un indirizzo email;
+            \item Un numero di telefono;
+            \item Un numero di fax;
+            \item Una mappa con le indicazioni per raggiungere il parco importata da Google Maps, nonostante non sia supportata da XHTML 1.0 Strict è stato scelto di tenerla dato che è compatibile con la maggior parte dei browser e fornisce un servizio non indifferente all’ utente che visita la pagina;
+            \item Un form che l’utente può utilizzare per mandare messaggi al personale del parco.
+        \end{itemize}
+        Il form è composto dai campi nome, cognome, email e messaggio da completare obbligatoriamente oltre ad un campo telefono opzionale, dopo essere stato inoltrato il form esegue uno script php per inviare il messaggio in una sezione dedicata del database. Il form è utilizzabile anche da utenti non registrati.
 
         \subsubsection{Utente registrato}
         L’utente viene definito registrato nel momento in cui ha effettuato la registrazione; dispone dei degli stessi casi casi d’uso dell'utente generico con l'aggiunte della possibilità di effettuare il login.
@@ -38,6 +66,14 @@
             \item Noleggio di un veicolo;
         \end{itemize}
 
+        \paragraph{Area personale} Un utente generico che accede alla sua area privata, come prima pagina vedrà le azioni rapide che può eseguire, come leggere i messaggi, fare acquisti o contattare l'amministratore. Attraverso il "Menu Utente" potrà navigare all'interno dell'area privata e accedere alle 4 sottosezioni presenti: la pagina dei messaggi in cui visualizzare le conversazioni con l'amministratore, lo storico dei noleggi e dei preventivi richiesti, la pagina di visualizzazione e  modifica dei dati personali.
+
+        \paragraph{Acquisto di un veicolo}
+        L'utente autenticato può acquistare un veicolo visitando la pagina "Veicoli in vendita" e cliccando l'apposito pulsante posto in corrispondenza del veicolo desiderato.
+
+        \paragraph{Noleggio di un veicolo}
+        L'utente autenticato può noleggiare un veicolo visitando la pagina "Veicoli a noleggio" e cliccando l'apposito pulsante posto in corrispondenza del veicolo desiderato. Verrà rendindirizzato in una pagina in cui dovrà inserire le date di inizio e fine del pediodo di noleggio; in caso di date incoerenti o indisponibilità del veicolo, all'utente verrà mostrato un messaggio d'errore.
+
         \subsubsection{Utente amministratore}
         Il sistema riconosce l’amministratore tramite il flag presente e modificabile solo dal database.
         L’accesso avviene tramite login classica con email e password.
@@ -52,51 +88,7 @@
             \item Rispondere ai messaggi ricevuti.
         \end{itemize}
 
-        \subsubsection{Dettaglio casi d'uso}
-        
-            \paragraph{Visualizzazione pagina "Veicoli a noleggio"}
-            In questa pagina vengono visualizzati i veicoli disponibili per il noleggio. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse a noleggiare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
-
-            \paragraph{Visualizzazione pagina "Veicoli in vendita"}
-            In questa pagina vengono visualizzati i veicoli disponibili per l'acquisto. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse ad acquistare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
-
-            \paragraph{Acquisto di un veicolo}
-            L'utente autenticato può acquistare un veicolo visitando la pagina "Veicoli in vendita" e cliccando l'apposito pulsante posto in corrispondenza del veicolo desiderato.
-
-            \paragraph{Noleggio di un veicolo}
-            L'utente autenticato può noleggiare un veicolo visitando la pagina "Veicoli a noleggio" e cliccando l'apposito pulsante posto in corrispondenza del veicolo desiderato. Verrà rendindirizzato in una pagina in cui dovrà inserire le date di inizio e fine del pediodo di noleggio; in caso di date incoerenti o indisponibilità del veicolo, all'utente verrà mostrato un messaggio d'errore.
-
-    \subsection{Pagine del sito}
-        In questa sezione sono presentate le varie pagine del sito, con le caratteristiche e le funzionalità che devono avere.
-        \subsubsection{Home}
-            La homepage del sito, la prima a cui l'utente accede, deve contenere le 5 W e presenta una breve descrizione del parco.
-            Prevede 3 sezioni:
-            \begin{enumerate}
-                \item il testo semplice con le informazioni generiche (5W+descrizione);
-                \item una sezione che mostra il prossimo evento del parco;
-                \item una sezione con alcune regole da rispettare nel parco.
-            \end{enumerate}
-            Se si desidera raggiungere la homepage mentre si sta visitando una pagina interna del sito, è possibile cliccare sulla voce home del menù oppure sul titolo/logo presente nell'header.
-
-            \subsubsection{Informazioni}
-            L’utente generico accede alla pagina info cliccando la sezione info presente nella navbar, vi è inoltre la possibilità di venire indirizzati direttamente alla sezione contatti della pagina cliccando sul link contatti che viene visualizzata passando il cursore sulla sezione info. La pagina offre informazioni e servizi utili all’utente come:
-            L’indirizzo del parco, la mappa con le indicazioni per raggiungere il parco importata da Google Maps, nonostante non sia supportata da XHTML 1.0 Strict è stato scelto di tenerla dato che è compatibile con la maggior parte dei browser e fornisce un servizio non indifferente all’utente che visita la pagina.
-            \begin{itemize}
-                \item Un indirizzo email;
-                \item Un numero di telefono;
-                \item Un numero di fax;
-                \item Una mappa con le indicazioni per raggiungere il parco importata da Google Maps, nonostante non sia supportata da XHTML 1.0 Strict è stato scelto di tenerla dato che è compatibile con la maggior parte dei browser e fornisce un servizio non indifferente all’ utente che visita la pagina;
-                \item Un form che l’utente può utilizzare per mandare messaggi al personale del parco.
-            \end{itemize}
-            Il form è composto dai campi nome, cognome, email e messaggio da completare obbligatoriamente oltre ad un campo telefono opzionale, dopo essere stato inoltrato il form esegue uno script php per inviare il messaggio in una sezione dedicata del database. Il form è utilizzabile anche da utenti non registrati.
-
-        \subsubsection{Acquisto e noleggio veicoli}
-        In queste due
-
-        \subsubsection{Area Privata}
-            L'area privata è diversa a seconda del tipo di utente che ha effettuato. Definiamo "Area personale" l'area privata di un utente generico registrato e loggato; definiamo "Area amministratore" l'area privata di un utente amministratore.
-            \paragraph{Area personale} Un utente generico che accede alla sua area privata, come prima pagina vedrà le azioni rapide che può eseguire, come leggere i messaggi, fare acquisti o contattare l'amministratore. Attraverso il "Menu Utente" potrà navigare all'interno dell'area privata e accedere alle 4 sottosezioni presenti: la pagina dei messaggi in cui visualizzare le conversazioni con l'amministratore, lo storico dei noleggi e dei preventivi richiesti, la pagina di visualizzazione e  modifica dei dati personali.
-            \paragraph{Area amministratore} L'area privata dell'utente amministratore presenta due importanti funzionalità: l'inserimento e la cancellazione di un auto. Per l'inserimento è sufficiente cliccare sui pulsanti presenti nelle "Azioni Rapide", mentre nelle sottosezioni dell'area amministrazione l'amministrazione può consultare ed eliminare i dati presenti nel database. Può inoltre consultare gli acquisti e i messaggi di tutti gli utenti registrati.
+        \paragraph{Area amministratore} L'area privata dell'utente amministratore presenta due importanti funzionalità: l'inserimento e la cancellazione di un auto. Per l'inserimento è sufficiente cliccare sui pulsanti presenti nelle "Azioni Rapide", mentre nelle sottosezioni dell'area amministrazione l'amministrazione può consultare ed eliminare i dati presenti nel database. Può inoltre consultare gli acquisti e i messaggi di tutti gli utenti registrati.
 
 
 \pagebreak
