--- a/Relazione/sezioni/Analisi.tex
+++ b/Relazione/sezioni/Analisi.tex
@@ -21,13 +21,12 @@
         \end{itemize}
 
         \paragraph{Visualizzazione pagina "Home"}
-        La homepage del sito, la prima a cui l'utente accede, deve contenere le 5 W e presenta una breve descrizione del parco.
-        Prevede 3 sezioni:
+        La homepage del sito, la prima a cui l'utente accede, deve contenere le 5 W e presenta una descrizione della politica e obbiettivi della concessionaria.
+        Prevede 2 sezioni:
         \begin{enumerate}
-            \item il testo semplice con le informazioni generiche (5W+descrizione);
-            \item una sezione che mostra il prossimo evento del parco;
-            \item una sezione con alcune regole da rispettare nel parco.
-        \end{enumerate}
+            \item Una breve presentazione della concessionaria e delle politiche aziendali. 
+            \item una sezione che conterra l'occasione del giorno.;
+            \end{enumerate}
         Se si desidera raggiungere la homepage mentre si sta visitando una pagina interna del sito, è possibile cliccare sulla voce home del menù oppure sul titolo/logo presente nell'header.
 
         \paragraph{Visualizzazione pagina "Veicoli a noleggio"}
@@ -37,16 +36,15 @@
         In questa pagina vengono visualizzati i veicoli disponibili per l'acquisto. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse ad acquistare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
 
         \paragraph{Visualizzazione pagina "Contatti"}
-        L’utente generico accede alla pagina info cliccando la sezione info presente nella navbar, vi è inoltre la possibilità di venire indirizzati direttamente alla sezione contatti della pagina cliccando sul link contatti che viene visualizzata passando il cursore sulla sezione info. La pagina offre informazioni e servizi utili all’utente come:
-        L’indirizzo del parco, la mappa con le indicazioni per raggiungere il parco importata da Google Maps, nonostante non sia supportata da XHTML 1.0 Strict è stato scelto di tenerla dato che è compatibile con la maggior parte dei browser e fornisce un servizio non indifferente all’utente che visita la pagina.
+        L’utente generico accede alla pagina Contatti cliccando la sezione Contatti presente nella navbar, è l'unica pagina che è stata dichiarata come HTML 5 nel sito dato che sì è scelto di importare una mappa da google maps. La pagina offre informazioni e servizi utili all’utente come:
         \begin{itemize}
             \item Un indirizzo email;
             \item Un numero di telefono;
             \item Un numero di fax;
-            \item Una mappa con le indicazioni per raggiungere il parco importata da Google Maps, nonostante non sia supportata da XHTML 1.0 Strict è stato scelto di tenerla dato che è compatibile con la maggior parte dei browser e fornisce un servizio non indifferente all’ utente che visita la pagina;
+            \item Una mappa con le indicazioni per raggiungere il parco importata da Google Maps;
             \item Un form che l’utente può utilizzare per mandare messaggi al personale del parco.
         \end{itemize}
-        Il form è composto dai campi nome, cognome, email e messaggio da completare obbligatoriamente oltre ad un campo telefono opzionale, dopo essere stato inoltrato il form esegue uno script php per inviare il messaggio in una sezione dedicata del database. Il form è utilizzabile anche da utenti non registrati.
+        Il form è composto dai campi nome, cognome, email, numero telefono e messaggio tutti da completare obbligatoriamente, dopo essere stato inoltrato il form esegue uno script php per inviare il messaggio in una sezione dedicata del database. Il form è utilizzabile anche da utenti non registrati.
 
         \subsubsection{Utente registrato}
         L’utente viene definito registrato nel momento in cui ha effettuato la registrazione; dispone dei degli stessi casi casi d’uso dell'utente generico con l'aggiunte della possibilità di effettuare il login.
