--- a/Relazione/sezioni/Analisi.tex
+++ b/Relazione/sezioni/Analisi.tex
@@ -41,8 +41,8 @@
             \item Un indirizzo email;
             \item Un numero di telefono;
             \item Un numero di fax;
-            \item Una mappa con le indicazioni per raggiungere il parco importata da Google Maps;
-            \item Un form che l’utente può utilizzare per mandare messaggi al personale del parco.
+            \item Una mappa con le indicazioni per raggiungere la concessionaria importata da Google Maps;
+            \item Un form che l’utente può utilizzare per mandare messaggi al personale della concessionaria.
         \end{itemize}
         Il form è composto dai campi nome, cognome, email, numero telefono e messaggio tutti da completare obbligatoriamente, dopo essere stato inoltrato il form esegue uno script php per inviare il messaggio in una sezione dedicata del database. Il form è utilizzabile anche da utenti non registrati.
 
