cambiato button in link

--- a/Relazione/sezioni/FaseDiProgettazione.tex
+++ b/Relazione/sezioni/FaseDiProgettazione.tex
@@ -39,9 +39,10 @@
     \begin{itemize}
         \item \textbf{Utenti:} contiene i dati e le credenziali degli utenti registrati, la password è stata codificata con la funzione \textit{password\_hash} di PHP;
         \item \textbf{Messaggi:} contiene i messaggi inviati dagli utenti;
+        \item \textbf{RisposteMessaggi:} contiene le risposte dell'amministratore ai messaggi inviati dagli utenti;
         \item \textbf{AutoVendita:} contiene le auto in vendita;
         \item \textbf{AutoNoleggio:} contiene le auto a noleggio;
-        \item \textbf{PreventivoAcquisto:} contiene gli acquisti delle auto effettuati dagli utenti;
+        \item \textbf{PreventivoAcquisto:} contiene i preventivi degli acquisti delle auto effettuati dagli utenti;
         \item \textbf{PrenotazioneNoleggio:} contiene i noleggi delle auto effettuati dagli utenti;
     \end{itemize}
 
