fix css e add parte di relazione

--- a/Relazione/sezioni/FaseDiProgettazione.tex
+++ b/Relazione/sezioni/FaseDiProgettazione.tex
@@ -47,5 +47,14 @@
     \end{itemize}
 
     \subsection{Accessibilità}
-
+    Per garantire l'accesso al sito al maggior numero di categorie di utenti possibile sono stati adottati molti accorgimenti.
+    Di seguito l'elenco dei più importanti:
+    \begin{itemize}
+        \item i breadcrumbs, che indicano sempre all'utente la posizione nel sito;
+        \item tutti i form sono provvisti di una legenda;
+        \item attributo alt nelle immagini, che rende disponibile un testo alternativo in caso in cui l’immagine non venga caricata o l'utente non sia in grado di vederla;
+        \item link per saltare l'header e il menù di navigazione, nascosti di default ma visibile agli screen reader. Sono posti come primi link della pagina e consentono di navigare direttamente al contenuto della pagina. prima voce del menu, viene utilizzata nel caso in cui l’utente che utilizza lo screen reader voglia saltare direttamente al contenuto della pagina, velocizzando la navigazione;
+        \item pulsante "TOP", sotto forma di bottone sempre visibile, che si trova a lato del content: se cliccato, ti porta all’inizio del content. Utile per evitare lo scroll e velocizzare la navigazione;
+        \item colori ad elevato contrasto, almeno livello AA del WCAG 2.1, verificato attraverso un apposito software;
+    \end{itemize}
 \pagebreak
