--- a/Relazione/sezioni/Analisi.tex
+++ b/Relazione/sezioni/Analisi.tex
@@ -24,8 +24,8 @@
         La homepage del sito, la prima a cui l'utente accede, deve contenere le 5 W e presenta una descrizione della politica e obbiettivi della concessionaria.
         Prevede 2 sezioni:
         \begin{enumerate}
-            \item Una breve presentazione della concessionaria e delle politiche aziendali. 
-            \item una sezione che conterra l'occasione del giorno.;
+            \item Una breve presentazione della concessionaria e delle politiche aziendali; 
+            \item una sezione che conterra l'occasione del giorno;
             \end{enumerate}
         Se si desidera raggiungere la homepage mentre si sta visitando una pagina interna del sito, è possibile cliccare sulla voce home del menù oppure sul titolo/logo presente nell'header.
 
