--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -25,10 +25,11 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
         \end{enumerate}
     \item Tabacchi Erik:
         \begin{enumerate}
-            \item pagine HTML: ;
-            \item CSS pagine HTML;
-            \item script PHP: ;
-            \item pagine PHP: ;
+            \item pagine HTML: home.html, contatti.html;
+            \item CSS pagine HTML: home, contatti, css stampa home e contatti, parte del css generale;
+            \item script PHP: invioMessaggio.php, parte di funzioniGenerali.php;
+            \item pagine PHP: home.php, contatti.php;
+            \item funzioni JS: controlloIframe.js, funzioni tasto di scroll-up;
             \item database.
         \end{enumerate}
 \end{itemize}
