fix logo relazione

--- a/Relazione/import/first-page.tex
+++ b/Relazione/import/first-page.tex
@@ -1,7 +1,7 @@
 \begin{center}
 	\huge{CONCESSIONARIA GREG}\\
 	\vspace{15pt}
-	\includegraphics{./img/logo.png}
+	\includegraphics{./img/logoGreg-trasparente.png}
 \end{center}
 
 \vspace{1.5cm}
