--- a/Relazione/sezioni/Analisi.tex
+++ b/Relazione/sezioni/Analisi.tex
@@ -21,7 +21,7 @@
         \end{itemize}
 
         \paragraph{Visualizzazione pagina "Home"}
-        La homepage del sito, la prima a cui l'utente accede, deve contenere le 5 W e presenta una descrizione della politica e obbiettivi della concessionaria.
+        La homepage del sito, la prima a cui l'utente accede, deve contenere le 5 W e presentare all'utente una descrizione della politica e degli obbiettivi della concessionaria.
         Prevede 2 sezioni:
         \begin{enumerate}
             \item Una breve presentazione della concessionaria e delle politiche aziendali; 
@@ -36,7 +36,7 @@
         In questa pagina vengono visualizzati i veicoli disponibili per l'acquisto. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse ad acquistare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
 
         \paragraph{Visualizzazione pagina "Contatti"}
-        L’utente generico accede alla pagina Contatti cliccando la sezione Contatti presente nella navbar, è l'unica pagina che è stata dichiarata come HTML 5 nel sito dato che sì è scelto di importare una mappa da google maps. La pagina offre informazioni e servizi utili all’utente come:
+        L’utente generico accede alla pagina Contatti cliccando la sezione Contatti presente nella navbar, essa è l'unica pagina che è stata dichiarata come HTML 5 nel sito dato che al suo interno si trova una mappa importata da google maps. La pagina offre informazioni e servizi utili all’utente come:
         \begin{itemize}
             \item Un indirizzo email;
             \item Un numero di telefono;
