--- a/Relazione/sezioni/Presentazione.tex
+++ b/Relazione/sezioni/Presentazione.tex
@@ -1,5 +1,5 @@
 \section{Presentazione}
-    Per la realizzazione del sito abbiamo utilizzato il linguaggio CSS usufruendo quasi esclusivamente di misure relative come em e percentuali e cercando di ridurre al minimo l'utilizzo di misure statiche come i px per creare un design fluido e che sia facilmente usufruibile da mobile.
+    Per la presentazione del sito abbiamo utilizzato il linguaggio CSS usufruendo quasi esclusivamente di misure relative come em e percentuali e cercando di ridurre al minimo l'utilizzo di misure statiche come i px per creare un design fluido e che sia facilmente usufruibile da mobile.
     Così facendo siamo riusciti ad ottenere un sito accessibile su ogni dispositivo, grazie anche all' utilizzo di media query che vanno a rendere il design del sito scalabile e accessibile.
     
     \subsection{Presentazione Generale}
