--- a/Relazione/sezioni/Presentazione.tex
+++ b/Relazione/sezioni/Presentazione.tex
@@ -21,8 +21,8 @@
         Il menu utente ed il menu amministratore non saranno più alla sinistra del contenuto ma sopra di esso.
     
     \subsection{CSS Print}
-        Il compito di gestire la presentazione delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo.
-        Vi sono inoltre alcune pagine a cui sono stati dedicati dei fogli di stile per gestire situazione di stampa a loro specifiche come ad esempio i pagebreak ma la struttura generale viene sempre dettata da cssPrint.css.
+        Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo.
+        Vi sono inoltre alcune pagine a cui sono stati dedicati dei fogli di stile aggiuntivi per gestire situazione di stampa a loro specifiche.
 
 
 
