--- a/Relazione/sezioni/Presentazione.tex
+++ b/Relazione/sezioni/Presentazione.tex
@@ -3,7 +3,8 @@
     Così facendo siamo riusciti ad ottenere un sito accessibile su ogni dispositivo, grazie anche all' utilizzo di media query che vanno a rendere il design del sito scalabile e accessibile.
     
     \subsection{Presentazione Generale}
-    Tutte le pagine presentano il logo della concessionaria in cima alla pagina con la possibilità di cliccarlo per venire reindirizzati alla home, appeno sotto di esso si può trovare il menu. Il menu è strutturato nella forma classica con una visualizzazione orrizontale di tutte le voci principali, la presentazione del menu cambiera quando utilizzato da mobile(vedere sezione "Differenze mobile vs desktop"). In fondo alla pagina si potra infine trovare il footer che ha il principale compito di contenere la dicitura per il copyright.
+    Questa breve sezione descrivera quello che è lo scheletro comune a tutte le pagine del sito.
+    Tutte le pagine presentano, uno sfonfo giallastro(hex #FFE4C4) nella parte esterna al body, il logo della concessionaria in cima alla pagina con la possibilità di cliccarlo per venire reindirizzati alla home, appeno sotto di esso si potrà trovare il menu. Il menu è strutturato nella forma classica con una visualizzazione orrizontale di tutte le voci principali, la presentazione del menu cambiera quando utilizzato da mobile(vedere sezione "Differenze mobile vs desktop"). In fondo alla pagina si potra infine trovare il footer che ha il principale compito di contenere la dicitura per il copyright.
 
     \subsection{Principali differenze mobile vs desktop}
     Le seguenti sezioni delinearanno le differenze più importanti che si possono osservare nella struttura delle pagine mobile rispetto alla loro controparte desktop, queste modifiche sono state implementate con l'intento di garantire una visualizzazione facile e pulita del sito da mobile.
@@ -21,8 +22,8 @@
         Il menu utente ed il menu amministratore non saranno più alla sinistra del contenuto ma sopra di esso.
     
     \subsection{CSS Print}
-        Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo.
-        Vi sono inoltre alcune pagine a cui sono stati dedicati dei fogli di stile aggiuntivi per gestire situazione di stampa a loro specifiche.
+        Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo in modo da ottenere un stampa il più efficente possibile .
+        Vi sono inoltre alcune pagine a cui sono stati dedicati dei fogli di stile aggiuntivi per gestire situazioni di stampa a loro specifiche.
 
 
 
