Comportamento ed implementazione

--- a/Relazione/sezioni/Comportamento.tex
+++ b/Relazione/sezioni/Comportamento.tex
@@ -1,9 +1,14 @@
 \section{Comportamento}
 Il comportamento del sito, ovvero i meccanismi di risposta all'interazione con l'utente, è suddiviso in script JavaScript (chiamati a lato client) e funzioni PHP (gestite a lato server).
     \subsection{JavaScript}
-        L'utilizzo di JavaScript è stato utilizzato per la validazione dei dati inseriti in input dall'utente lato client e per la visualizzazione del menù con dispositivi mobile o schermi di piccole dimensioni.
-        I controlli JS vengono eseguiti anche tramite PHP a lato server, in modo tale da mantenere la completa accesibilità del sito anche nel caso in cui JavaScript non fosse disponibile perché disabilitato o non supportato dal browser.
+        Il linguaggio JavaScript è stato utilizzato principalmente per la validazione dei dati inseriti in input dall'utente lato client e per la visualizzazione del menù con dispositivi mobile o schermi di piccole dimensioni; inoltre viene impiegato per la gestione client-side dei noleggi.
+        I controlli JavaScript vengono eseguiti anche tramite PHP a lato server, in modo tale da mantenere la completa accesibilità del sito anche nel caso in cui JavaScript non fosse disponibile perché disabilitato o non supportato dal browser.
     \subsection{PHP}
-        La componente PHP risulta sicuramente come la più corposa del sito in quanto viene utilizzata non solo per i controlli (necessari ogniqualvolta JavaScript non sia disponibile), ma anche per la generazione di gran parte delle pagine, la generazione delle parti comuni a tutte le pagine e le interazioni con il database. La suddivisione in diversi file e classi rispecchia quanto appena detto: modulesInit racchiude le funzioni per la generazione delle pagine XHTML e per i controlli sull'input, sqlInteractions contiene le funzioni di base per l'interazione con il database, mentre le interazioni più complesse sono definite in file separati.
-       
+        La componente PHP risulta sicuramente come la più corposa del sito in quanto viene utilizzata non solo per i controlli, ma anche per la generazione della struttura delle pagine e le interazioni con il database.
+        Generare la struttura tramite PHP permette numerosi vantaggi, come:
+        \begin{itemize}
+            \item Il contenuto del sito rispecchia sempre il Database grazie alle estrazioni presenti nelle pagine PHP.
+            \item Il sito è piu mantenibile poichè le parti comuni alle pagine del sito sono scritte tramite una sola funzione PHP.
+            \item Tramite la sostituzione di stringhe è possibile cambiare codice il HTML ad esempio per togliere i link circolari.
+        \end{itemize}
 \pagebreak
